<resources>
    <string name="app_name">Fondo</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title_today">Today</string>
    <string name="action_search">Search</string>
    <string name="action_night_mode">Night mode</string>
    <string name="content_description_photo_from_unsplash">Photo from unsplash</string>
    <string name="animal">Animal</string>
    <string name="nature">Nature</string>
    <string name="food_drink"><![CDATA[Food & drink]]></string>
    <string name="space">Space</string>
    <string name="sport">Sport</string>
    <string name="business_work"><![CDATA[Business & work]]></string>
    <string name="fashion">Fashion</string>
    <string name="art_culture"><![CDATA[Art & culture]]></string>
    <string name="architecture">Architecture</string>
    <string name="texture_pattern"><![CDATA[Texture & pattern]]></string>
    <string name="technology">Technology</string>
    <string name="flatlay">Flatlay</string>
    <string name="menu_bnavbar_daily">Daily</string>
    <string name="menu_bnavbar_categories">Categories</string>
    <string name="menu_bnavbar_history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_transition">photo_transition</string>
    <string name="download">Download</string>
    <string name="downloadingWallpaper">Downloading wallpaper</string>
    <string name="downloaded">Downloaded</string>
    <string name="wallpaperDownloadComplete">Wallpaper Download Complete</string>
    <string name="today">TODAY</string>
    <string name="search_photos_unsplash">Search photos Unsplash</string>
    <string name="simple_fragment_transition">search_transition</string>
    <string name="search_header">SEARCH</string>
    <string name="share_photo_by">Share photo by</string>
    <string name="photo_by">Photo by</string>
    <string name="on_unsplash">on Unsplash </string>
    <string name="share_photo_to">Share photo to...</string>
    <string name="history">HISTORY</string>
    <string name="categories">CATEGORIES</string>
    <string name="auth_error">Auth error</string>
    <string name="no_photos_found">No photos found</string>
    <string name="empty_history">No photos added yet</string>
    <string name="empty_search">Photos not found</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about">About</string>
    <string name="customization">Customization</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="visit_unsplash">Visit Unsplash.com</string>
    <string name="unsplash_link"><![CDATA[https://unsplash.com/?utm_source=Fondo&utm_medium=referral]]></string>
    <string name="show_more">Show more</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="share_photo">Share photo</string>
    <string name="chossen">As wallpaper</string>
    <string name="author">Author\'s name</string>
    <string name="visit_profile">Visit profile</string>

    <string name="entry_mode_dark">Dark</string>
    <string name="entry_mode_light">Light</string>
    <string name="entry_mode_battery">Set by Battery Saver</string>
    <string name="entry_mode_default">System default</string>
    <string name="select_theme">Choose light, dark or device configuration</string>
    <string name="unsplash_summary">The internet’s source of freely useable images.</string>
    <string name="changes_apply_message">Changes are apply when back to home</string>
    <string name="download_error">Download error</string>
    <string name="permission_denied">Permission denied</string>
</resources>
