<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/about">
        <Preference
            app:title="@string/visit_unsplash"
                android:summary="@string/unsplash_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/unsplash_link"/>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/customization">
        <ListPreference
                android:key="list"
                android:title="@string/select_theme_title"
                android:entries="@array/themes_names_array"
                android:entryValues="@array/themes_values_array"
                android:summary="@string/select_theme"
                />
    </PreferenceCategory>

</PreferenceScreen>